--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     path: ..
   shell: ^2.0.0
   xdg_directories: ^0.2.0+2
+  dbus: ^0.7.8
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  ffi: ^2.0.1
+  xml: ^6.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
