--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.17.0
   collection: ^1.16.0
   path: ^1.8.2
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
